--- a/src/views/moviesDetail.ejs
+++ b/src/views/moviesDetail.ejs
@@ -20,7 +20,10 @@
     <br>
     <section>
         <!--Aquí debe colocar los botones de Modificar - Borrar y Listado de Películas-->
+    <a href="/movies/edit/<%=" movie.id %>" class="button">Modificar</a>
+    <a href="/movies/delete/<%=" movie.id %>" class="button">Borrar</a>
     </section>
+
 
 </body>
 </html>
